--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -71,6 +71,10 @@ tbody > tr > td {
   vertical-align: middle;
 }
 
+.sort-row {
+  cursor: pointer;
+}
+
 footer {
   background-color: $quaternary-color;
   width: auto;
@@ -80,6 +84,16 @@ footer {
   text-align: center;
   padding: 1em;
   box-shadow: 0 -8px 20px rgba(0, 0, 0, 0.12), 0 -3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-display {
+  max-height: 500px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.modal-title {
+  text-transform: uppercase;
 }
 
 @media only screen and (max-width: 900px) {
