build(css): Create responsive stackable table

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -123,17 +123,62 @@ footer {
   transition: .5s;
 }
 
-@media only screen and (max-width: 900px) {
+/* TABLE STACK CODE: https://stackoverflow.com/questions/28983809/how-to-make-a-table-responsive-stack-columns */
+@media only screen and (max-width: 1080px),
+       only screen and (max-width: 900px),
+       only screen and (max-width: 800px),
+       only screen and (max-width: 600px)
+{
+
   .search-field {
     width: 100%;
+  }
+
+  #responsive-table table,
+  #responsive-table thead,
+  #responsive-table tbody,
+  #responsive-table th,
+  #responsive-table td,
+  #responsive-table tr {
+    display: block;
+  }
+
+  #responsive-table thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  #responsive-table tr {
+    border: 1px solid #ccc;
+  }
+
+  #responsive-table td {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align: left;
+  }
+
+  #responsive-table td:before {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align: left;
+    font-weight: bold;
+  }
+
+  #responsive-table td:before {
+    content: attr(data-title);
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .search-field {
-    width: 100%;
-  }
-
   footer {
     width: auto;
     height: 7em;
