--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -128,6 +128,12 @@ footer {
 }
 
 /* OVERRIDING BOOTSTRAP VARIABLES */
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 .pagination-custom {
   --bs-pagination-color: #16325B;
   --bs-pagination-bg: #fafafa;
@@ -148,6 +154,10 @@ footer {
        only screen and (max-width: 800px),
        only screen and (max-width: 600px)
 {
+
+  .pagination-container {
+    display: none;
+  }
 
   .search-field {
     width: 100%;
