build(project): Finnish insert functionality

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -12,3 +12,4 @@ $delete-button-color: #CC2B52;
 $delete-button-hover-color: #AF1740;
 
 $default-font-color: #212529;
+$default-border-color: #dee2e6;
