--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -185,7 +185,7 @@ footer {
 }
 
 .delete-button {
-  width: 100px;
+  width: 50px;
   height: 50px;
   border-radius: 10px;
   background-color: $delete-button-color;
@@ -201,23 +201,14 @@ footer {
   transition: .5s;
 }
 
-.form-checkbox {
-  display: block;
-  min-height: 1.5rem;
-  margin-bottom: 0.125rem;
-  margin-top: 0.5rem;
+.form-check-input:checked {
+  background-color: $primary-color !important;
+  border-color: $primary-color !important;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 
-.form-checkbox-input {
-  float: left;
-  margin-left: 1.5em;
-  border-radius: 0.25em;
-}
-
-.form-checkbox-label {
-  cursor: default;
-  color: $default-font-color;
-  margin-left: 0.5em;
+textarea {
+  resize: none;
 }
 
 /* TABLE STACK CODE: https://stackoverflow.com/questions/28983809/how-to-make-a-table-responsive-stack-columns */
