--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -149,8 +149,17 @@ footer {
   cursor: pointer;
 }
 
+.button-group {
+  display: flex;
+  gap: 8px;
+}
+
 .crud-buttons {
   margin-left: 5px;
+  padding: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 .insert-button {
@@ -171,7 +180,7 @@ footer {
 }
 
 .update-button {
-  width: 100px;
+  width: 50px;
   height: 50px;
   border-radius: 10px;
   background-color: $quaternary-color;
@@ -213,10 +222,9 @@ textarea {
 
 /* TABLE STACK CODE: https://stackoverflow.com/questions/28983809/how-to-make-a-table-responsive-stack-columns */
 @media only screen and (max-width: 1080px),
-       only screen and (max-width: 900px),
-       only screen and (max-width: 800px),
-       only screen and (max-width: 600px)
-{
+only screen and (max-width: 900px),
+only screen and (max-width: 800px),
+only screen and (max-width: 600px) {
 
   .pagination-container {
     display: none;
