--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* COLOR SCHEME: https://colorhunt.co/palette/16325b227b9478b7d0ffdc7f */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
@@ -11844,6 +11846,277 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-/** GENERAL */
+/** GENERAL COLORS */
+/** ACCORDION SPECIFIC */
+#root {
+  background-color: #FAFAFA;
+}
+
+.header-logo {
+  display: flex;
+}
+
+.navbar-background {
+  --bs-bg-opacity: 1;
+  background-color: #16325B;
+}
+
+.navbar-text-custom {
+  color: #FFF;
+  text-shadow: 1px 1px 2px #1a1d20;
+  line-height: 3;
+}
+
+.content-custom {
+  width: 100%;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.search-field,
+.form-field {
+  display: block;
+  flex: 0 0 auto;
+  width: 25%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  appearance: none;
+  background-color: #FFF;
+  background-clip: padding-box;
+  border: 1px solid #dee2e6;
+  border-radius: 0.375rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.space-around {
+  margin: 1rem;
+}
+
+.spinner-custom {
+  color: #227B94 !important;
+  margin: 10% 50% 10% 50%;
+}
+
+thead > tr > th,
+tbody > tr > td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.sort-row {
+  cursor: pointer;
+}
+
+footer {
+  background-color: #FFDC7F;
+  width: auto;
+  height: 5em;
+  color: #212529;
+  font-size: 12px;
+  text-align: center;
+  padding: 1em;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-display {
+  max-height: 500px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.modal-title {
+  text-transform: uppercase;
+}
+
+.btn-primary {
+  background-color: #16325B;
+  border-color: #16325B;
+}
+.btn-primary:hover {
+  background-color: #227B94;
+  border-color: #227B94;
+  text-shadow: 1px 1px 2px #1a1d20;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease-in-out;
+}
+
+.btn-secondary {
+  background-color: #78B7D0;
+  border-color: #78B7D0;
+  color: #393e46;
+}
+.btn-secondary:hover {
+  background-color: #16325B;
+  border-color: #16325B;
+  text-shadow: 1px 1px 2px #1a1d20;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease-in-out;
+}
+
+#custom-switch {
+  cursor: pointer;
+}
+
+/* OVERRIDING BOOTSTRAP VARIABLES */
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination-custom {
+  --bs-pagination-color: #16325B;
+  --bs-pagination-bg: #fafafa;
+  --bs-pagination-hover-color: #227B94;
+  --bs-pagination-focus-color: #227B94;
+  --bs-pagination-active-color: #fff;
+  --bs-pagination-active-bg: #16325B;
+  --bs-pagination-active-border-color: #16325B;
+}
+
+.active-pagination {
+  cursor: pointer;
+}
+
+.button-group {
+  display: flex;
+  gap: 8px;
+}
+
+.crud-buttons {
+  margin-left: 5px;
+  padding: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.insert-button {
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #227B94;
+  color: #FAFAFA;
+  border: none;
+}
+
+.insert-button:hover {
+  background-color: #78B7D0;
+  color: #FAFAFA;
+  text-shadow: 1px 1px 2px #1a1d20;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
+}
+
+.update-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #FFDC7F;
+  border: none;
+}
+
+.update-button:hover {
+  background-color: #FBD288;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
+}
+
+.delete-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #CC2B52;
+  color: #FAFAFA;
+  border: none;
+}
+
+.delete-button:hover {
+  background-color: #AF1740;
+  color: #FAFAFA;
+  text-shadow: 1px 1px 2px #1a1d20;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
+}
+
+.form-check-input:checked {
+  background-color: #16325B !important;
+  border-color: #16325B !important;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+textarea {
+  resize: none;
+}
+
+.accordion-button {
+  background-color: #78B7D0;
+  color: #212529;
+}
+.accordion-button:not(.collapsed) {
+  background-color: #16325B;
+  color: #FAFAFA;
+}
+.accordion-button:focus {
+  box-shadow: none;
+}
+
+/* TABLE STACK CODE: https://stackoverflow.com/questions/28983809/how-to-make-a-table-responsive-stack-columns */
+@media only screen and (max-width: 1080px), only screen and (max-width: 900px), only screen and (max-width: 800px), only screen and (max-width: 600px) {
+  .pagination-container {
+    display: none;
+  }
+  .search-field {
+    width: 100%;
+  }
+  #responsive-table table,
+  #responsive-table thead,
+  #responsive-table tbody,
+  #responsive-table th,
+  #responsive-table td,
+  #responsive-table tr {
+    display: block;
+  }
+  #responsive-table thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  #responsive-table tr {
+    border: 1px solid #ccc;
+  }
+  #responsive-table td {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align: left;
+  }
+  #responsive-table td:before {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align: left;
+    font-weight: bold;
+  }
+  #responsive-table td:before {
+    content: attr(data-title);
+  }
+}
+@media only screen and (max-width: 600px) {
+  footer {
+    width: auto;
+    height: 7em;
+  }
+}
 
 /*# sourceMappingURL=custom.css.map */
